Update contact dark mode to correct css

--- a/static/styles/contact.css
+++ b/static/styles/contact.css
@@ -325,14 +325,6 @@ hr
   display: flex;
 }
 
-.triangleUp {
-	width: 0;
-	height: 0;
-	border-left: 0.6rem solid transparent;
-	border-right: 0.6rem solid transparent;
-	border-bottom: 0.8rem solid #555;
-}
-
 .contactWrapper
 {
   grid-column: 3/18;
